NAS-102000 fix alignment of ipwith netmask on interfaces

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -1345,5 +1345,9 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
     text-decoration: underline;
   }
 
+  app-interfaces-form form-ipwithnetmask tooltip {
+    display: inline-block !important;
+  }
+
 
  } // end of ix theme
